Explained a bit more.